--- a/public/BucketAdmin/html/css/style.css
+++ b/public/BucketAdmin/html/css/style.css
@@ -4317,7 +4317,7 @@ tr.odd.gradeX td.sorting_1,tr.even.gradeX td.sorting_1,table.display tr.even.gra
 }
 /*footer*/
 .footer-section {
-    background:#32323A;
+    background: #000000;
     color:#fff;
     padding:10px 0;
     /*position:fixed;*/
